<resources>
    <string name="app_name">茨城高専休講情報</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_version">Version 0.2</string>
    <string name="action_update">更新</string>
    <string name="spnPrompt">プロンプトのテキスト</string>
    <string name="grade_text">年</string>
    <string name="dep_text">科</string>
    <string name="class_text">組</string>
    <string name="ryugakusei">留学生</string>
</resources>
