<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/alertdialog_layout"
    android:orientation="vertical" >
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/spgrade"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:prompt="@string/spnPrompt"
            android:entries="@array/spnGrade" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/grade_text"/>
        <Spinner
            android:id="@+id/spdep"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:prompt="@string/spnPrompt"
            android:entries="@array/spnDep" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/dep_text"/>
        <Spinner
            android:id="@+id/spclass"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:prompt="@string/spnPrompt"
            android:entries="@array/spnClass" />
        <TextView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:text="@string/class_text"/>

    </LinearLayout>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/abroad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ryugakusei"/>
    </LinearLayout>
</LinearLayout>